# homeschool-mathtimer

./: .gitignore  CMakeLists.txt  COPYING  README.md
data/: homeschool-mathtimer.desktop  math-timer.desktop
debian/: changelog  control  copyright
include/: common.hpp  fltkfunctions.hpp
src/: common.cpp  fltkfunctions.cpp  math-timer.cxx  math-timer.fld  math-timer.h
